<resources>
    <string name="app_name">EmployeyMate</string>
    <string name="search">Search</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>

    <string name="image">image</string>
    <string name="department">Department</string>
    <string name="enter_first_name">First name</string>
    <string name="enter_last_name">Last name</string>
    <string name="enter_job_role">Select job role</string>
    <string name="add_employee">Add Employee</string>
    <string name="edit_employee">Edit employee</string>
    <string name="no_employees_in_the_list">No employees in the list</string>
    <string name="delete">Delete</string>
    <string name="all_fields_required">All fields required</string>
    <string name="all_fields_required_edit">Note that all fields must be completed</string>
    <string name="enter_email">email</string>
    <string name="enter_department">Select department</string>
    <string name="enter_hire_date">Select hire date</string>
    <string name="enter_contract_type">Select contract type</string>
    <string name="enter_salary">Salary</string>
    <string name="enter_phone_number">Phone number</string>
    <string name="enter_address_line">Address line</string>
    <string name="enter_city">City</string>
    <string name="enter_state">State</string>
    <string name="enter_zip_code">Zip code</string>
    <string name="enter_country">Country</string>
    <string name="cancel">Cancel</string>

    <!-- Helper Texts on Add Employee Fragment -->
    <string name="firstNameRequired">Enter first name</string>
    <string name="lastNameRequired">Enter last name</string>
    <string name="jobRoleRequired">Enter job role</string>
    <string name="departmentRequired">Enter department</string>
    <string name="hireDateRequired">Enter hiring date</string>
    <string name="contractTypeRequired">Enter contract type</string>
    <string name="salaryRequired">Enter salary</string>
    <string name="emailRequired">Enter email address</string>
    <string name="emailFormat">Invalid email format</string>
    <string name="phoneNumberRequired">Enter phone number</string>
    <string name="cityRequired">Enter city</string>
    <string name="addressRequired">Enter address line</string>
    <string name="stateRequired">Enter state</string>
    <string name="zipCodeRequired">Enter zip code</string>
    <string name="countryRequired">Enter country</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="job_role">Job Role</string>
    <string name="ab">AB</string>
    <string name="prepositionIn">" | "</string>
    <string name="employeeId">ID: 12345</string>

    <string name="employeeHeading">EmployMate</string>
    <string name="employeeSubheading">Keep track of your team — add, edit, or search employees in a snap!</string>
    <string name="employeeTotalNumber">00</string>
    <string name="employeeTotal">Employees:</string>

</resources>