<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".NewEmployeeFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/editToolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:title="Edit Employee"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/editEmployeeHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/editToolbar"
            android:layout_marginTop="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/edit_employee"
            android:textColor="@color/blueVariant"
            android:textSize="24sp"
            android:textStyle="bold"
            />

        <EditText
            android:id="@+id/editEmployeeFirstName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/editEmployeeHeading"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/enter_first_name"
            android:inputType="text"
            android:maxLines="1"
            android:padding="12dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editEmployeeLastName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/editEmployeeFirstName"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:fontFamily="@font/poppins_regular"
            android:gravity="top"
            android:hint="@string/enter_last_name"
            android:inputType="text"
            android:padding="12dp"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/editEmployeeJobRole"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_below="@id/editEmployeeLastName"
            android:layout_marginTop="12dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:autofillHints=""
            android:fontFamily="@font/poppins_regular"
            android:gravity="top"
            android:hint="@string/enter_job_role"
            android:inputType="text"
            android:padding="12dp"
            android:textSize="16sp" />

        <Button
            android:id="@+id/editEmployeeSaveBtn"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_below="@id/editEmployeeJobRole"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/save" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/editEmployeeDeleteBtn"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:layout_below="@id/editEmployeeSaveBtn"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/delete" />
    </RelativeLayout>
</layout>