<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".NewNoteFragment"
        android:padding="12dp">

        <TextView
            android:id="@+id/addEmployeeHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/add_employee"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/employeeFirstName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints=""
            android:hint="@string/enter_first_name"
            android:inputType="text"
            android:padding="12dp"
            android:textSize="16sp"
            android:layout_below="@id/addEmployeeHeading"
            android:layout_marginTop="16dp"
            android:maxLines="1"
            android:fontFamily="@font/poppins_regular"/>

        <EditText
            android:id="@+id/employeeLastName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/enter_last_name"
            android:autofillHints=""
            android:inputType="text"
            android:gravity="top"
            android:padding="12dp"
            android:textSize="16sp"
            android:fontFamily="@font/poppins_regular"
            android:layout_below="@id/employeeFirstName"
            android:layout_marginTop="12dp" />

    </RelativeLayout>
</layout>