<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeFragment">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addEmployeeFab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="28dp"
            android:backgroundTint="@color/blueVariant"
            android:clickable="true"
            android:contentDescription="@string/image"
            android:tintMode="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_add" />

        <!-- Tool Bar to keep same header height -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/homeMenu"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:icon="@drawable/ic_search"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            android:title="@string/search"
            app:actionViewClass="androidx.appcompat.widget.SearchView"
            app:layout_constraintTop_toTopOf="parent"
            app:showAsAction="ifRoom"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/employeeHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/homeMenu"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/employeeHeading"
            android:textStyle="bold"
            android:textColor="@color/blueVariant"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/employeeSubheading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/employeeSubheading"
            android:textColor="@color/blueVariant"
            android:textSize="18sp"
            android:textStyle="normal"

            app:layout_constraintStart_toStartOf="@id/employeeHeading"
            app:layout_constraintTop_toBottomOf="@id/employeeHeading" />
        <!-- Search feature -->
        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:queryHint="Search employees..."
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            app:layout_constraintTop_toBottomOf="@+id/employeeSubheading"
            app:layout_constraintBottom_toTopOf="@+id/homeRecyclerView"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/homeRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/searchView"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/emptyEmployeesImage"
            android:contentDescription="@string/no_employees_in_the_list"
            android:visibility="gone"
            android:src="@drawable/emptybkg"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_begin="56dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>